--- a/Aula-07/calculadora-imc.html
+++ b/Aula-07/calculadora-imc.html
@@ -11,9 +11,9 @@
     <section class="container">
         <h1>calculadora IMC</h1>
         <form action="" id="formulario">
-            <label for="peso" name="peso" id="peso">Peso</label>
+            <label for="peso" name="peso" >Peso</label>
             <input type="text" id="peso">
-            <label for="altura" name="altura" id="altura">Altura</label>
+            <label for="altura" name="altura" >Altura</label>
             <input type="text" id="altura">
             <button type="submit">Enviar</button>
         </form><!--criando um formulario-->
