trabalhando com mais um pouco de javaScript

--- a/Aula-07/calculadora-imc.html
+++ b/Aula-07/calculadora-imc.html
@@ -17,6 +17,7 @@
             <input type="text" id="altura">
             <button type="submit">Enviar</button>
         </form><!--criando um formulario-->
+    <div id="a"></div>
     </section>
 </body>
 </html>
