Mexendo mais com JS

--- a/DOM/4-getElementByTagName.html
+++ b/DOM/4-getElementByTagName.html
@@ -10,7 +10,7 @@
     <p>Isso é um parágrafo</p>
     <p>Isso é um parágrafo</p>
     <script>
-        document.getElementsByClassName("p")[1].innerHTML="hello world"
+        document.getElementsByTagName("p")[1].innerHTML="hello world"
     </script>
 </body>
 </html>
